--- a/src/style.scss
+++ b/src/style.scss
@@ -12,11 +12,24 @@ html, body, #react-app {
 }
 
 .search-icon {
+	$border-width: 4px;
+
 	display: block;
-	border: 4px solid $search-icon-color;
+	border: $border-width solid $search-icon-color;
 	border-radius: 50%;
 	width: 50px;
 	height: 50px;
+
+	&:after {
+		content: '';
+		height: 30px;
+		border: ($border-width / 2) solid $search-icon-color;
+		position: relative;
+		top: 40px;
+		left: 45%;
+		transform: rotate(45deg);
+		transform-origin: top left;
+	}
 }
 
 .search-icon-row {
