--- a/src/style.scss
+++ b/src/style.scss
@@ -17,18 +17,24 @@ html, body, #react-app {
 	display: block;
 	border: $border-width solid $search-icon-color;
 	border-radius: 50%;
-	width: 50px;
-	height: 50px;
+	width: 37.5px;
+	height: 37.5px;
 
 	&:after {
+		display: block;
 		content: '';
-		height: 30px;
-		border: ($border-width / 2) solid $search-icon-color;
+		height: 14px;
+		width: 0px;
+		border: ($border-width * 0.35) solid $search-icon-color;
 		position: relative;
-		top: 40px;
-		left: 45%;
-		transform: rotate(45deg);
-		transform-origin: top left;
+		top: 27px;
+		left: 100%;
+		transform: rotate(-45deg);
+		background-color: $search-icon-color;
+ }
+
+	&:hover {
+		cursor: pointer;
 	}
 }
 
