font-size added

--- a/src/style.scss
+++ b/src/style.scss
@@ -11,6 +11,12 @@ html, body, #react-app {
 	font-family: "Lucida Grande","Lucida Sans Unicode", Tahoma, Sans-Serif;
 }
 
+.container-fluid {
+	margin-top: 25%;
+	margin-bottom: 25%;
+	font-size: 1.150em;
+}
+
 .search-icon {
 	$border-width: 4px;
 
