--- a/src/style.scss
+++ b/src/style.scss
@@ -12,8 +12,7 @@ html, body, #react-app {
 }
 
 .container-fluid {
-	margin-top: 25%;
-	margin-bottom: 25%;
+	padding-top: 15%;
 	font-size: 1.150em;
 }
 
@@ -46,5 +45,5 @@ html, body, #react-app {
 
 .search-icon-row {
 	margin-top: 1%;
-	margin-bottom: 1%;
+	margin-bottom: 2%;
 }
