--- a/src/style.scss
+++ b/src/style.scss
@@ -1,5 +1,5 @@
 $app-background-color: #092B40;
-$search-icon-color: #D96F32;
+$icon-color: #D96F32;
 $text-color: #fff;
 
 @import url(https://fonts.googleapis.com/css?family=Rokkitt:700);
@@ -20,7 +20,7 @@ html, body, #react-app {
 	$border-width: 4px;
 
 	display: block;
-	border: $border-width solid $search-icon-color;
+	border: $border-width solid $icon-color;
 	border-radius: 50%;
 	width: 37.5px;
 	height: 37.5px;
@@ -30,16 +30,38 @@ html, body, #react-app {
 		content: '';
 		height: 14px;
 		width: 0px;
-		border: ($border-width * 0.35) solid $search-icon-color;
+		border: ($border-width * 0.35) solid $icon-color;
 		position: relative;
 		top: 27px;
 		left: 100%;
 		transform: rotate(-45deg);
-		background-color: $search-icon-color;
- }
+		background-color: $icon-color;
+ 	}
 
 	&:hover {
 		cursor: pointer;
+	}
+}
+
+.textbox {
+	background-color: $app-background-color;
+	border-radius: 20px 20px 20px 20px;
+	border: 4px solid $icon-color;
+
+	height: 38px;
+	width: 19%;
+	padding-left: 14px;
+	font-size: .7em;
+
+	&:after {
+		display: block;
+		position: relative;
+		content: 'X';
+		color: $icon-color;
+	}
+
+	&:focus {
+		outline: none;
 	}
 }
 
