--- a/src/style.scss
+++ b/src/style.scss
@@ -44,24 +44,32 @@ html, body, #react-app {
 }
 
 .textbox {
-	background-color: $app-background-color;
-	border-radius: 20px 20px 20px 20px;
-	border: 4px solid $icon-color;
+	input {
+		background-color: $app-background-color;
+		border-radius: 20px;
+		border: 4px solid $icon-color;
+		height: 38px;
+		width: 19%;
+		padding-left: 14px;
+		font-size: .7em;
 
-	height: 38px;
-	width: 19%;
-	padding-left: 14px;
-	font-size: .7em;
-
-	&:after {
-		display: block;
-		position: relative;
-		content: 'X';
-		color: $icon-color;
+		&:focus {
+			outline: none;
+		}
 	}
 
-	&:focus {
-		outline: none;
+	@mixin cross($color) {
+		content: '';
+		display: block;
+		width: 20px;
+		height: 20px;
+		//border: 3px solid $icon-color;
+		background-color: $icon-color;
+		color: $color;
+	}
+
+	&:after {
+		@include cross($icon-color);
 	}
 }
 
