--- a/src/style.scss
+++ b/src/style.scss
@@ -74,6 +74,7 @@ html, body, #react-app {
 
 		&:hover {
 			opacity: 1;
+			cursor: pointer;
 		}
 
 		&:before {
@@ -87,7 +88,8 @@ html, body, #react-app {
 
 	i {
 		position: absolute;
-
+		top: 60%;
+		right: 42.25%;
 	}
 }
 
