--- a/src/style.scss
+++ b/src/style.scss
@@ -138,5 +138,6 @@ html, body, #react-app {
 
 .search-icon-row {
 	margin-top: 1%;
-	margin-bottom: 2%;
+	margin-bottom: .5%;
+	min-height: 65px;
 }
