random article link, on focus text decoration removed

--- a/src/style.scss
+++ b/src/style.scss
@@ -19,7 +19,7 @@ html, body, #react-app {
 .rand-article-link > a {
 	color: $text-color;
 
-	&:hover {
+	&:hover, &:focus {
 		text-decoration: none;
 	} 
 }
