wikipedia list integrated in WikiList Component under ReactCSSTransitionGroup component

--- a/src/style.scss
+++ b/src/style.scss
@@ -170,3 +170,19 @@ html, body, #react-app {
 	margin-bottom: .5%;
 	min-height: 65px;
 }
+
+.wikilist-enter {
+
+}
+
+.wikilist-enter-active {
+
+}
+
+.wikilist-leave {
+
+}
+
+.wikilist-leave-active {
+	
+}
