--- a/src/style.scss
+++ b/src/style.scss
@@ -199,6 +199,7 @@ html, body, #react-app {
 	margin: 2%;
 	width: 90%;
 	box-sizing: content-box;
+	border-left: 5px solid $app-background-color;
 
 	.wikilist-row-title {
 		color: black;
@@ -212,7 +213,7 @@ html, body, #react-app {
 	}
 
 	&:hover {
-		border-left: 5px solid $icon-color;
+		border-color: $icon-color;
 		cursor: pointer;
 	}
 }
