--- a/src/style.scss
+++ b/src/style.scss
@@ -180,17 +180,39 @@ html, body, #react-app {
 }
 
 .wikilist-enter-active {
-	opacity: 1;
-	transition: opacity .5s ease-in;
+	//transition: opacity .5s ease-in;
+	animation: slide-top 1s ease-in forwards;
+
+	@keyframes slide-top {
+		0% {
+			opacity: 0;
+			transform: translateY(5 * 100%);
+		}
+		20% {
+			opacity: 0;
+		}
+		40% {
+			opacity: 0;
+		}
+		60% {
+			opacity: 0;
+		}
+		80% {
+			opacity: 0;
+		}
+		100% {
+			opacity: 1;
+			transform: translateY(0%);
+		}
+	}
 }
 
 .wikilist-leave {
-	opacity: 1;
+	
 }
 
 .wikilist-leave-active {
-	opacity: 0;
-	transition: opacity .5 ease-in;
+	
 }
 
 .wikiList-row {
