--- a/src/style.scss
+++ b/src/style.scss
@@ -141,6 +141,31 @@ html, body, #react-app {
 	}	
 }
 
+.pull-up {
+	/* .rand-article-link {
+		transform: translateY(-5 * 100%);
+	}
+	input {
+		transform: translateY(-3 * 100%);
+	} */
+	/* .search-row {
+		transform: translateY(-1 * 100%);
+	} */
+	transform: translateY(-1 * 100%);
+	p { 
+		display: none;
+	}
+}
+
+.push-down {
+	a, input {
+		transform: translateY(0%);
+	}
+	p {
+		display: block;
+	}
+}
+
 .cross {
 	position: absolute;
 	width: 20px;
@@ -180,7 +205,7 @@ html, body, #react-app {
 }
 
 .wikilist-enter-active {
-	animation: slide-top 1s ease-in forwards;
+	animation: slide-top 1s linear forwards;
 
 	@keyframes slide-top {
 		0% {
@@ -191,9 +216,6 @@ html, body, #react-app {
 			opacity: 0;
 		}
 		90% {
-			opacity: 0.1;
-		}
-		95% {
 			opacity: 0.2;
 		}
 		100% {
@@ -211,7 +233,7 @@ html, body, #react-app {
 	
 }
 
-.wikiList-row {
+.wikilist-row {
 	background-color: $wikilist-row-background-color;
 	padding: 3.0%;
 	padding-bottom: 1.0%;
