cross added and shriking and expanding based on clicks added

--- a/src/style.scss
+++ b/src/style.scss
@@ -171,6 +171,8 @@ html, body, #react-app {
 	width: 20px;
 	height: 20px;
 	opacity: .8;
+	left: 56.8%;
+	bottom: 0%;
 
 	&:before, &:after {
 		content: ' ';
